Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108697

Program can crash when Connections target is destroyed

XMLWordPrintable

    • All
    • 6cd8d209ec (qt/qtdeclarative/dev) 6cd8d209ec (qt/tqtc-qtdeclarative/dev) eba1bae41b (qt/qtdeclarative/6.4) eba1bae41b (qt/tqtc-qtdeclarative/6.4) 8cc3c80cb0 (qt/tqtc-qtdeclarative/6.2)

      A program that uses Quick Connections component can crash when an object that is target of this component is destroyed.

      See also: https://codereview.qt-project.org/c/qt/qtdeclarative/+/441979

        1. qmlcrash.tar.gz
          1 kB
          Ievgenii Meshcheriakov
        For Gerrit Dashboard: QTBUG-108697
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            ievgenii.meshcheriakov Ievgenii Meshcheriakov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes