Connections: Don't crash when target is deleted

Fixes: QTBUG-108697
Change-Id: I019edf3a0a702ad1dca340473265933e4d131e99
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 6cd8d209ec472a658a330f25b84f92cd61e0d4cf)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>